--- a/ansible/inventory/group_vars/testing_farm_public_workers.yml
+++ b/ansible/inventory/group_vars/testing_farm_public_workers.yml
@@ -21,9 +21,14 @@ security_sudoers_passwordless:
 security_fail2ban_enabled: true
 security_fail2ban_custom_configuration_template: "{{ ansible_dir }}/templates/jail.local.j2"
 
-# ssh key
+# ssh key worker deployment
 ssh_private_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_worker"
 ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_worker.pub"
+
+# ansible ssh key
+root_dir: "{{ ansible_config_file | dirname }}"
+ansible_dir: "{{ root_dir }}/ansible"
+ansible_ssh_private_key_file: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_worker.decrypted"
 
 # nomad
 nomad_servers: >
