--- a/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
+++ b/ansible/inventory/group_vars/testing_farm_redhat_workers.yml
@@ -22,9 +22,14 @@ nomad_servers: >
     {% endfor %}
   ]
 
-# ssh key for connecting to workers
+# ssh key for worker deployment
 ssh_private_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_worker"
 ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_worker.pub"
+
+# ansible ssh key
+root_dir: "{{ ansible_config_file | dirname }}"
+ansible_dir: "{{ root_dir }}/ansible"
+ansible_ssh_private_key_file: "{{ ansible_dir }}/secrets/ssh/id_rsa_redhat_worker.decrypted"
 
 # podman container storage
 container_storage_path: /data/containers
