RHIVOS images may not necessarily *start* with "auto"

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
@@ -14,4 +14,4 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version >= "8"'
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
