--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yml
@@ -13,4 +13,4 @@
     baseurl: http://beaker.engineering.redhat.com/rpms/
     gpgcheck: false
     enabled: true
-  when: 'not IMAGE_NAME|lower|regex_search("^auto-")'
+  when: '"auto-osbuild" not in IMAGE_NAME|lower'
