--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yml
@@ -3,5 +3,5 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version >= "8"'
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
   ignore_errors: true
