--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yml
@@ -12,4 +12,4 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version == "7"'
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
