--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -31,7 +31,7 @@
        ansible_distribution == "CentOS" or
        ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version <= "7"'
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
 
 - block:
     - name: Add RCM Repository for RHEL8+
@@ -55,4 +55,4 @@
        ansible_distribution == "CentOS" or
        ansible_distribution == "OracleLinux"'
     - 'ansible_distribution_major_version >= "8"'
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
