--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo-unavailable.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo-unavailable.yml
@@ -28,7 +28,7 @@
   #
   when:
     - beaker_client_repo_file_status.stat.exists
-    - 'not IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
 
 #
 # Be verbose about the fact we skipped the workaround
@@ -37,4 +37,4 @@
     msg: "Skipping workaround, because beaker_client_repo_file does not exist"
   when:
     - not beaker_client_repo_file_status.stat.exists
-    - 'IMAGE_NAME|lower|regex_search("^auto-")'
+    - '"auto-osbuild" in IMAGE_NAME|lower'
