--- a/tests/worker/public/pipeline/sti-x86_64-failure.yaml
+++ b/tests/worker/public/pipeline/sti-x86_64-failure.yaml
@@ -148,6 +148,16 @@ checks:
           <property name="snapshots" value="False"/>
          </testing-environment>
         </testcase>
+        <testing-environment name="requested">
+         <property name="arch" value="x86_64"/>
+         <property name="compose" value="Fedora-Rawhide"/>
+         <property name="snapshots" value="False"/>
+        </testing-environment>
+        <testing-environment name="provisioned">
+         <property name="arch" value="x86_64"/>
+         <property name="compose" value="Fedora-Rawhide"/>
+         <property name="snapshots" value="False"/>
+        </testing-environment>
        </testsuite>
       </testsuites>
 
