--- a/tests/worker/public/pipeline/tmt-container-failure.yaml
+++ b/tests/worker/public/pipeline/tmt-container-failure.yaml
@@ -105,7 +105,7 @@ checks:
        <properties>
         <property name="baseosci.overall-result" value="failed"/>
        </properties>
-       <testsuite name="None:x86_64:/testing-farm/sanity" result="failed" tests="1">
+       <testsuite name="/testing-farm/sanity" result="failed" tests="1">
         <logs>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-run.log" name="tmt-log"/>
          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
@@ -137,6 +137,14 @@ checks:
           <property name="snapshots" value="False"/>
          </testing-environment>
         </testcase>
+        <testing-environment name="requested">
+         <property name="arch" value="x86_64"/>
+         <property name="snapshots" value="False"/>
+        </testing-environment>
+        <testing-environment name="provisioned">
+         <property name="arch" value="x86_64"/>
+         <property name="snapshots" value="False"/>
+        </testing-environment>
        </testsuite>
       </testsuites>
 
@@ -144,7 +152,7 @@ checks:
     - |
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
-       <testsuite name="None:x86_64:/testing-farm/sanity" tests="1" failures="1" errors="0" skipped="0">
+       <testsuite name="/testing-farm/sanity" tests="1" failures="1" errors="0" skipped="0">
         <testcase name="/testing-farm/script" classname="tests">
          <system-out>+ '[' -z '' ']'
       + SCRIPT='cat /etc/os-release'
