--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,21 +6,20 @@ authors = ["Miroslav Vadkerti <<mvadkert@redhat.com>>"]
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-awscli = "^1.23.1"
-ansible = "^4.0.0"
+python = "~3.9"
+awscli = "1.25.21"
+ansible-core = "~2.14.6"
 ansible-lint = "^4.0.0"
-jinja2 = "^2.11.2"
 ansible-vault = "^1.2.0"
+jinja2 = "^3.0.0"
 cryptography = "^2.9.2"
 yq = "^2.10.0"
-botocore = "^1.23.26"
-boto3 = "^1.20.26"
+boto3 = "1.24.21"
 tft-cli = "^0.0.8"
-markupsafe = "~2.0.1"
-yamllint = "^1.29.0"
+markupsafe = "*"
 
 [tool.poetry.dev-dependencies]
+yamllint = "^1.29.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
