--- a/ansible/playbooks/create-public-worker.yml
+++ b/ansible/playbooks/create-public-worker.yml
@@ -67,10 +67,15 @@
 #
 - hosts: new_workers
   remote_user: fedora
+  vars:
+    - swapfile_size: 16384
+    - swapfile_location: /data/swapfile
   vars_files:
     - ../secrets/credentials.yml
     - ../vars/common.yml
   pre_tasks:
+    - import_tasks: ../tasks/swapfile.yaml
+      become: true
     - include: ../tasks/dns.yml
     - include: ../tasks/ssh-key.yml
     - include: ../tasks/artifacts.yml
@@ -82,12 +87,6 @@
       pause:
         prompt: "Make sure Artemis and guests accept connections from {{ ansible_host }}"
   roles:
-    - name: geerlingguy.swap
-      vars:
-        swap_file_path: /data/swapfile
-        swap_file_size_mb: "16384"
-        swap_file_state: present
-      become: true
     - name: nomad
   tasks:
     - include: ../tasks/jobs-register.yml
