--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -4,23 +4,23 @@
     pkg_retry_delay: 30
   tasks:
   # workarounds
-  - include_tasks: workaround-beaker-client-repo-unavailable.yml
-  - include_tasks: workaround-disable-qa-tools.yml
-  - include_tasks: workaround-centos-8.yml
-  - include_tasks: workaround-automotive.yml
+  - include_tasks: workaround-beaker-client-repo-unavailable.yaml
+  - include_tasks: workaround-disable-qa-tools.yaml
+  - include_tasks: workaround-centos-8.yaml
+  - include_tasks: workaround-automotive.yaml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
   # Disabled, as we test in AWS now anyway
-  # - include_tasks: nosync.yml
-  - include_tasks: install-koji-brew.yml
-  - include_tasks: enable-beaker-tasks.yml
-  - include_tasks: enable-crb.yml
+  # - include_tasks: nosync.yaml
+  - include_tasks: install-koji-brew.yaml
+  - include_tasks: enable-beaker-tasks.yaml
+  - include_tasks: enable-crb.yaml
   # Tag repository must be enabled to bring in latest deps which passed gating
   # https://projects.engineering.redhat.com/browse/TFT-640
-  - include_tasks: tag-repository.yml
+  - include_tasks: tag-repository.yaml
   # OAMG team needs rhel-extras around
-  - include_tasks: enable-extras.yml
+  - include_tasks: enable-extras.yaml
   # OSCI users expect buildroot to be enabled by default
   # https://projects.engineering.redhat.com/browse/TFT-619
-  - include_tasks: enable-buildroot.yml
+  - include_tasks: enable-buildroot.yaml
   # TFT-1987 - Hostname on AWS needs to be explicitely set
-  - include_tasks: aws-hostname.yml
+  - include_tasks: aws-hostname.yaml
