--- a/tests/worker/public/pipeline/tmt-container-secrets.yaml
+++ b/tests/worker/public/pipeline/tmt-container-secrets.yaml
@@ -46,15 +46,13 @@ checks:
                   "arch": "x86_64",
                   "artifacts": [],
                   "secrets": "******",
-                  "snapshots": false,
-                  "variables": {
-                      "SCRIPT": "test $SECRET = some-secret"
-                  }
+                  "snapshots": false
               }
           ],
           "plan": "/testing-farm/sanity",
           "plan_filter": "<not applicable>",
           "ref": "main",
+          "test_filter": "<not applicable>",
           "type": "fmf",
           "url": "https://gitlab.com/testing-farm/tests",
           "webhook_url": "<no webhook specified>"
