tests: normalize test outcomes

--- a/tests/worker/public/pipeline/sti-x86_64-failure.yaml
+++ b/tests/worker/public/pipeline/sti-x86_64-failure.yaml
@@ -123,7 +123,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="failed"/>
         </properties>
-        <testcase name="sanity" result="fail">
+        <testcase name="sanity" result="failed">
          <properties>
           <property name="baseosci.arch" value="x86_64"/>
           <property name="baseosci.connectable_host" value="{{ hostname_ip_address_pattern }}"/>
