--- a/tests/worker/public/pipeline/sti-x86_64.yaml
+++ b/tests/worker/public/pipeline/sti-x86_64.yaml
@@ -123,7 +123,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="passed"/>
         </properties>
-        <testcase name="sanity" result="pass">
+        <testcase name="sanity" result="passed">
          <properties>
           <property name="baseosci.arch" value="x86_64"/>
           <property name="baseosci.connectable_host" value="{{ hostname_ip_address_pattern }}"/>
