--- a/tests/worker/public/pipeline/tmt-aarch64.yaml
+++ b/tests/worker/public/pipeline/tmt-aarch64.yaml
@@ -1,5 +1,9 @@
 ---
 
+extends:
+  - base-tmt_pipeline
+  - base-tmt_checks
+
 marks:
   - public
 
@@ -7,102 +11,7 @@ variables:
   ARCH: aarch64
   COMPOSE: Fedora-Rawhide
   REQUEST_ID: 723d2d6d-3bfe-4479-a6b2-3c3a59a38c7d
-
-pipeline: |
-  hide-secrets
-  rules-engine
-  testing-farm-request --request-id {{ REQUEST_ID }}
-  ansible
-  artemis
-  fedora-copr:copr
-  guest-setup-testing-farm:guest-setup
-  install-copr-build
-  install-koji-build-execute
-  install-repository
-  git
-  coldstore
-  testing-farm-request-state-reporter
-  test-schedule-tmt-connect:test-schedule-tmt
-  test-scheduler-testing-farm
-  test-schedule-runner
-  test-schedule-report
-
-checks:
-  literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service"
-    - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
-    - "[testing-farm-request-state-reporter] pipeline complete"
-    - "[test-schedule-tmt-connect] cloning repo https://gitlab.com/testing-farm/tests (branch not specified, ref main)"
-    - "[test-schedule-tmt-connect] tmt exited with code 0"
-    - "[test-schedule-tmt-connect] cloning repo"
-    - "[test-schedule-runner] running test schedule of 1 entries"
-    - "[test-schedule-report] Result of testing: PASSED"
-
-
-  literal-patterns:
-    - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Guest is being provisioned"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Guest is ready"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Guest has become alive"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Guest provisioned"
-    - "[artemis] [{{ artemis_guestname_pattern }}] destroying guest"
-    - "[artemis] [{{ artemis_guestname_pattern }}] successfully released"
-
-    - table:
-        -
-          - "{{ COMPOSE }}:{{ ARCH }}:/testing-farm/sanity"
-          - CREATED
-          - OK
-          - UNDEFINED
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - ""
-          - tmt
-
-    - table:
-        -
-          - "{{ COMPOSE }}:{{ ARCH }}:/testing-farm/sanity"
-          - GUEST_SETUP
-          - OK
-          - UNDEFINED
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - tmt
-
-    - table:
-        -
-          - "{{ COMPOSE }}:{{ ARCH }}:/testing-farm/sanity"
-          - RUNNING
-          - OK
-          - UNDEFINED
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - tmt
-
-    - table:
-        -
-          - "{{ COMPOSE }}:{{ ARCH }}:/testing-farm/sanity"
-          - CLEANUP
-          - OK
-          - PASSED
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - tmt
-
-    - table:
-        -
-          - "{{ COMPOSE }}:{{ ARCH }}:/testing-farm/sanity"
-          - COMPLETE
-          - OK
-          - PASSED
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - "{{ ARCH }} {{ COMPOSE }} S-"
-          - tmt
-
-  artifacts:
-    - "guest-setup-{{ artemis_guestname_pattern }}"
-    - "guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-pre-artifact-installation.txt"
-    - "guest-setup-{{ artemis_guestname_pattern }}/guest-setup-output-post-artifact-installation.txt"
-    - "citool-debug\\.txt"
-    - "citool-debug\\.verbose\\.txt"
-    - "results\\.xml"
-    - "work-sanity[a-z0-9_]+/tmt-reproducer\\.sh"
+  RESULT: PASSED
+  GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
+  GIT_REF: main
+  PLAN: /testing-farm/sanity
