--- a/tests/worker/public/pipeline/tmt-container-secrets.yaml
+++ b/tests/worker/public/pipeline/tmt-container-secrets.yaml
@@ -1,40 +1,23 @@
 ---
 
+extends:
+  - base-tmt-container_pipeline
+  - base-tmt-container_checks
+
 marks:
   - public
 
 variables:
   REQUEST_ID: 22277bf9-b8bd-4ac3-af35-07d89ad2c469
-
-pipeline: |
-  hide-secrets
-  rules-engine
-  testing-farm-request --request-id {{ REQUEST_ID }}
-  ansible
-  static-guest --guest=localhost
-  guest-setup-no-playbooks:guest-setup
-  git
-  coldstore
-  testing-farm-request-state-reporter
-  test-schedule-tmt
-  test-scheduler-testing-farm
-  test-schedule-runner
-  test-schedule-report
+  ARCH: x86_64
+  RESULT: PASSED
+  GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
+  GIT_REF: main
+  PLAN: /testing-farm/sanity
 
 checks:
   literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service 'https://internal.api.dev.testing-farm.io'"
-    - "[static-guest] added guest 'localhost' with architecture "
-    - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
-    - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
-    - "[testing-farm-request-state-reporter] pipeline complete"
-    - "[test-schedule-tmt] cloning repo https://gitlab.com/testing-farm/tests (branch not specified, ref main)"
     - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script (on default-0) [1/1]"
-    - "[test-schedule-report] Result of testing: PASSED"
-    - "[test-schedule-runner] 1 entries pending:"
-    - "[test-schedule-runner] 0 entries pending:"
-    - "[test-schedule-runner] finished schedule:"
-    - "[test-schedule-report] results saved into results.xml"
     - "[hide-secrets] Hiding secrets from all files under '.' path"
 
   literal-patterns:
@@ -43,83 +26,24 @@ checks:
       {
           "environments_requested": [
               {
-                  "arch": "x86_64",
+                  "arch": "{{ ARCH }}",
                   "artifacts": [],
                   "secrets": "******",
-                  "snapshots": false
+                  "snapshots": false,
+                  "variables": {
+                      "SCRIPT": "test $SECRET = some-secret",
+                      "TESTING_FARM_GIT_REF": "main",
+                      "TESTING_FARM_GIT_URL": "{{ GIT_CLONE_URL }}",
+                      "TESTING_FARM_REQUEST_ID": "{{ REQUEST_ID }}",
+                      "TESTING_FARM_TEST_TYPE": "fmf"
+                  }
               }
           ],
-          "plan": "/testing-farm/sanity",
+          "plan": "{{ PLAN }}",
           "plan_filter": "<not applicable>",
           "ref": "main",
           "test_filter": "<not applicable>",
           "type": "fmf",
-          "url": "https://gitlab.com/testing-farm/tests",
+          "url": "{{ GIT_CLONE_URL }}",
           "webhook_url": "<no webhook specified>"
       }
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - CREATED
-          - OK
-          - UNDEFINED
-          - "x86_64 None S-"
-          - ""
-          - tmt
-
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - GUEST_PROVISIONING
-          - OK
-          - UNDEFINED
-          - "x86_64 None S-"
-          - ""
-          - tmt
-
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - GUEST_SETUP
-          - OK
-          - UNDEFINED
-          - "x86_64 None S-"
-          - "x86_64 None S-"
-          - tmt
-
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - RUNNING
-          - OK
-          - UNDEFINED
-          - "x86_64 None S-"
-          - "x86_64 None S-"
-          - tmt
-
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - CLEANUP
-          - OK
-          - PASSED
-          - "x86_64 None S-"
-          - "x86_64 None S-"
-          - tmt
-
-    - table:
-        -
-          - "None:x86_64:/testing-farm/sanity"
-          - COMPLETE
-          - OK
-          - PASSED
-          - "x86_64 None S-"
-          - "x86_64 None S-"
-          - tmt
-
-  artifacts:
-    - "citool-debug\\.txt"
-    - "citool-debug\\.verbose\\.txt"
-    - "git-main[a-z0-9]+"
-    - "results\\.xml"
-    - "work-sanity[a-z0-9_]+/tmt-reproducer\\.sh"
