--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
@@ -9,11 +9,9 @@
 
 # Check if machine is an AWS machine
 - name: Make request to EC2 metadata service
-  uri:
-    # To determine whether this instance is located in AWS, verify the existence of the instance metadata URL.
-    # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instancedata-data-retrieval.html
-    url: "http://169.254.169.254/latest/meta-data/instance-id"
-    return_content: false
+  # To determine whether this instance is located in AWS, verify the existence of the instance metadata URL.
+  # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instancedata-data-retrieval.html
+  command: bash -c 'curl --head --connect-timeout 5 http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null | grep -o 200'
   register: aws_metadata_response
   failed_when: false
 
@@ -31,5 +29,5 @@
   when:
     - GUEST is defined
     - GUEST.artemis_id is defined
-    - aws_metadata_response.status is defined
-    - aws_metadata_response.status == 200
+    - aws_metadata_response is defined
+    - aws_metadata_response.stdout == 200
