--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/aws-hostname.yaml
@@ -11,7 +11,7 @@
 - name: Make request to EC2 metadata service
   # To determine whether this instance is located in AWS, verify the existence of the instance metadata URL.
   # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/instancedata-data-retrieval.html
-  command: bash -c 'curl --head --connect-timeout 5 http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null | grep -o 200'
+  command: bash -c 'curl --head --connect-timeout -L 5 http://169.254.169.254/latest/meta-data/instance-id 2>/dev/null | grep -o 200'
   register: aws_metadata_response
   failed_when: false
 
