--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -56,8 +56,8 @@
           # NOTE: order is important, we prefer Z-Stream tag repository if exists
           command: >
             bash -c 'for URL in {{ tag_repository_url_z_stream }} {{ tag_repository_url_mainline }}; do
-              curl --head $URL 2>/dev/null | grep -q "200" && echo $URL && break;
-            done'
+              curl --head -L $URL 2>/dev/null | grep -q "200" && echo $URL && break;
+            done; true'
           register: output
 
         - name: Set tag_repository_url fact
