ranch/public/guest-setup: add workaround for Fedora Rawhide
We need to install python3-dnf for the ansible to work.

Backport of https://gitlab.com/testing-farm/infrastructure/-/merge_requests/232.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -5,6 +5,7 @@
   tasks:
   # DO NOT ENABLE BY DEFAULT, IT BREAKS PYTHON TEST SUITE (and can others)
   # - include_tasks: nosync.yaml
+  - include_tasks: workaround-fedora-rawhide.yaml
   - include_tasks: workaround-fedora-release.yaml
   - include_tasks: update-and-restart.yaml
   - include_tasks: workaround-dns.yaml
