--- a/tests/worker/public/pipeline/tmt-container-failure.yaml
+++ b/tests/worker/public/pipeline/tmt-container-failure.yaml
@@ -8,12 +8,12 @@ marks:
   - public
 
 variables:
-  REQUEST_ID: 9e72a39e-2785-43b6-b862-e7e7fa2166ea  # TODO: use a test in the official tests repo
+  REQUEST_ID: d91cc905-f5b6-448b-a72b-56b1570e85a4
   ARCH: x86_64
   RESULT: FAILED
-  GIT_CLONE_URL: https://gitlab.com/janhavlin/tests
+  GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
   GIT_REF: main
-  PLAN: /testing-farm/sanity
+  PLAN: /testing-farm/failure
 
 checks:
   literal-patterns[results.xml]:
@@ -25,14 +25,14 @@ checks:
        </properties>
        <testsuite name="{{ PLAN }}" result="failed" tests="1">
         <logs>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-run.log" name="tmt-log"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
-         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}" name="workdir"/>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}/tmt-run.log" name="tmt-log"/>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}/tmt-reproducer.sh" name="tmt-reproducer"/>
+         <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}" name="workdir"/>
         </logs>
         <properties>
          <property name="baseosci.result" value="failed"/>
         </properties>
-        <testcase name="/testing-farm/script" result="failed">
+        <testcase name="/testing-farm/failure" result="failed">
          <properties>
           <property name="baseosci.arch" value="{{ ARCH }}"/>
           <property name="baseosci.connectable_host" value="localhost"/>
@@ -42,8 +42,8 @@ checks:
           <property name="baseosci.variant" value=""/>
          </properties>
          <logs>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
-          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1" name="log_dir" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
+          <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-failure{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/failure-1/output.txt" name="testout.log" schedule-entry="None:{{ ARCH }}:{{ PLAN }}" schedule-stage="running"/>
          </logs>
          <failure/>
          <testing-environment name="requested">
@@ -71,7 +71,7 @@ checks:
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="1" errors="0" skipped="0">
-        <testcase name="/testing-farm/script" classname="tests">
+        <testcase name="/testing-farm/failure" classname="tests">
          <system-out>NAME="Fedora Linux"
       VERSION="38 (Container Image)"
       ID=fedora
@@ -95,7 +95,7 @@ checks:
       VARIANT="Container Image"
       VARIANT_ID=container
       </system-out>
-         <failure type="FAIL" message='Test "/testing-farm/script" failed.'/>
+         <failure type="FAIL" message='Test "/testing-farm/failure" failed.'/>
         </testcase>
        </testsuite>
       </testsuites>
